<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.jenkins-ci.plugins</groupId>
    <artifactId>plugin</artifactId>
    <version>4.86</version>
    <relativePath />
  </parent>

  <artifactId>git-client</artifactId>
  <version>${revision}${changelist}</version>
  <packaging>hpi</packaging>

  <name>Jenkins Git client plugin</name>
  <url>https://github.com/${gitHubRepo}</url>
  <inceptionYear>2013</inceptionYear>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>markewaite</id>
      <name>Mark Waite</name>
      <email>mark.earl.waite@gmail.com</email>
    </developer>
    <developer>
      <id>rsandell</id>
      <name>Robert Sandell</name>
      <email>rsandell@cloudbees.com</email>
      <url>http://rsandell.com</url>
    </developer>
    <developer>
      <id>mramonleon</id>
      <name>M Ramon Leon</name>
      <email>rleon@cloudbees.com</email>
    </developer>
    <developer>
      <id>olamy</id>
      <name>Olivier Lamy</name>
      <email>olamy@apache.org</email>
      <url>https://about.me/olamy</url>
      <timezone>Australia/Brisbane</timezone>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/${gitHubRepo}</connection>
    <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
    <tag>${scmTag}</tag>
    <url>https://github.com/${gitHubRepo}</url>
  </scm>

  <properties>
    <revision>6.0.0</revision>
    <changelist>-SNAPSHOT</changelist>
    <!-- Character set tests fail unless file.encoding is set -->
    <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
    <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
    <java.version>17</java.version>
    <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
    <jenkins.baseline>2.462</jenkins.baseline>
    <!-- <jenkins.version>${jenkins.baseline}.3</jenkins.version> -->
    <jenkins.version>2.463</jenkins.version>
    <jgit.version>7.0.0.202407311305-m2</jgit.version>
    <spotbugs.effort>Max</spotbugs.effort>
    <spotbugs.threshold>Low</spotbugs.threshold>
    <spotless.check.skip>false</spotless.check.skip>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.jenkins.tools.bom</groupId>
        <artifactId>bom-${jenkins.baseline}.x</artifactId>
        <version>3234.v5ca_5154341ef</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>io.jenkins</groupId>
      <artifactId>configuration-as-code</artifactId>
      <optional>true</optional>
    </dependency>
    <!-- Use gson api plugin rather than JGit LFS transitive dependency inclusion of gson -->
    <dependency>
      <groupId>io.jenkins.plugins</groupId>
      <artifactId>gson-api</artifactId>
    </dependency>
    <dependency>
      <!-- Use mina api common plugin rather than JGit transitive dependency inclusion of Apache Mina sshd common -->
      <groupId>io.jenkins.plugins.mina-sshd-api</groupId>
      <artifactId>mina-sshd-api-common</artifactId>
    </dependency>
    <dependency>
      <!-- Use mina api core plugin rather than JGit transitive dependency inclusion of Apache Mina sshd core -->
      <groupId>io.jenkins.plugins.mina-sshd-api</groupId>
      <artifactId>mina-sshd-api-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jgit</groupId>
      <artifactId>org.eclipse.jgit</artifactId>
      <version>${jgit.version}</version>
      <exclusions>
        <exclusion>
          <!-- Provided by Jenkins core -->
          <groupId>commons-codec</groupId>
          <artifactId>commons-codec</artifactId>
        </exclusion>
        <exclusion>
          <!-- Provided by Jenkins core -->
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <!-- Include jgit's Apache HTTP client so that we can avoid
           automatic NTLM on Windows. See JENKINS-37934 -->
      <groupId>org.eclipse.jgit</groupId>
      <artifactId>org.eclipse.jgit.http.apache</artifactId>
      <version>${jgit.version}</version>
      <exclusions>
        <!-- Provided by apache-httpcomponents-client-4-api plugin -->
        <exclusion>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpclient</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpcore</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <!-- Include jgit http server so that git-userContent and other
           plugins can depend on git-client-plugin rather than
           including their own JGit http server version. Avoid class
           loader mismatches and bugs like JENKINS-21756 -->
      <groupId>org.eclipse.jgit</groupId>
      <artifactId>org.eclipse.jgit.http.server</artifactId>
      <version>${jgit.version}</version>
    </dependency>
    <dependency>
      <!-- Include jgit's LFS module for eventual large file support -->
      <groupId>org.eclipse.jgit</groupId>
      <artifactId>org.eclipse.jgit.lfs</artifactId>
      <version>${jgit.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.google.code.gson</groupId>
          <artifactId>gson</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jgit</groupId>
      <artifactId>org.eclipse.jgit.ssh.apache</artifactId>
      <version>${jgit.version}</version>
      <exclusions>
        <exclusion>
          <!-- Prevent inclusion of transitive dependency -->
          <groupId>net.i2p.crypto</groupId>
          <artifactId>eddsa</artifactId>
        </exclusion>
        <exclusion>
          <!-- Prevent inclusion of transitive dependency, OSGi not needed by git client plugin -->
          <groupId>org.apache.sshd</groupId>
          <artifactId>sshd-osgi</artifactId>
        </exclusion>
        <exclusion>
          <!-- Prevent inclusion of transitive dependency, sftp not needed by git client plugin -->
          <groupId>org.apache.sshd</groupId>
          <artifactId>sshd-sftp</artifactId>
        </exclusion>
        <exclusion>
          <!-- provided by jenkins-core -->
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <!-- Use httpclient plugin rather than JGit transitive dependency inclusion of Apache httpclient -->
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>apache-httpcomponents-client-4-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>credentials</artifactId>
    </dependency>
    <dependency>
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>script-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>ssh-credentials</artifactId>
    </dependency>
    <dependency>
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>structs</artifactId>
    </dependency>
    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.github.sparsick.testcontainers.gitserver</groupId>
      <artifactId>testcontainers-gitserver</artifactId>
      <version>0.8.0</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>ch.qos.logback</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>io.jenkins.configuration-as-code</groupId>
      <artifactId>test-harness</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>nl.jqno.equalsverifier</groupId>
      <artifactId>equalsverifier</artifactId>
      <version>3.16.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>4.2.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- Credentials test requires scm-api -->
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>scm-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- Tests require the scm-api-tests jar -->
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>scm-api</artifactId>
      <classifier>tests</classifier>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.objenesis</groupId>
      <artifactId>objenesis</artifactId>
      <version>3.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <version>1.20.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>repo.jenkins-ci.org</id>
      <url>https://repo.jenkins-ci.org/public/</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>repo.jenkins-ci.org</id>
      <url>https://repo.jenkins-ci.org/public/</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <systemPropertyVariables>
            <org.jenkinsci.plugins.gitclient.verifier.SshHostKeyVerificationStrategy.jgit_known_hosts_file>${project.build.directory}/ssh/know_hosts</org.jenkinsci.plugins.gitclient.verifier.SshHostKeyVerificationStrategy.jgit_known_hosts_file>
          </systemPropertyVariables>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <fixTags>param,return,throws,link</fixTags>
          <author>false</author>
          <force>true</force>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
